--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,16 +5,22 @@
 # See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
+orbs:
+  go: circleci/go@1.11.0
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
   test:
+    executor:
+      name: go/default
+      tag: '1.21.1'
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
-    docker:
-      # Specify the version you desire here
-      # See: https://circleci.com/developer/images/image/cimg/base
-      - image: cimg/base:current
+    # docker:
+    #   # Specify the version you desire here
+    #   # See: https://circleci.com/developer/images/image/cimg/base
+    #   - image: cimg/go:1.21.1
 
     # Add steps to the job
     # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
@@ -22,9 +28,12 @@ jobs:
       # Checkout the code as the first step.
       - checkout
       # Replace this with a real test runner invocation
+      - go/load-cache
+      - go/mod-download
       - run:
-          name: Run tests
-          command: echo 'replace me with real tests!' && false
+        name: Go test
+        command: go test . -v
+      - go/save-cache
   # build:
   #   docker:
   #     - image: cimg/base:current
