--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,20 +23,22 @@ jobs:
           name: Go mod download
           command: go mod download
       - run:
-          name: Go test
-          command: go test . -v
-      - run:
           name: Install dockerize
           command: curl -L https://github.com/jwilder/dockerize/releases/download/v0.7.0/dockerize-linux-amd64-v0.7.0.tar.gz | tar xzf -
       - run:
           name: Wait for MySQL
           command: ./dockerize -wait tcp://127.0.0.1:3306 -timeout 1m
+      - run:
+          name: Go test
+          command: ./test-ci.sh
       - save_cache:
           name: Save Go caches
           key: go-dependencies-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod # GOMODCACHE (module cache)
             - /home/circleci/.cache/go-build # GOCACHE (build cache)
+      - store_artifacts:
+          path: coverage.html
 
 workflows:
   example:
