--- a/.circleci/test_config.yml
+++ b/.circleci/test_config.yml
@@ -17,22 +17,21 @@ jobs:
           MYSQL_DATABASE: test
     steps:
       - checkout
+      - run:
+          name: Install Firebase Emulator
+          command: curl -sL firebase.tools | bash
       - restore_cache:
           name: Restore Go caches
           keys:
             - go-dependencies-{{ checksum "go.sum" }}
       - run:
-          name: Install Firebase Emulator
-          command: curl -sL firebase.tools | bash
-      - run:
           name: Go mod download
           command: go mod download
       - run:
-          name: Install dockerize
-          command: curl -L https://github.com/jwilder/dockerize/releases/download/v0.7.0/dockerize-linux-amd64-v0.7.0.tar.gz | tar xzf -
-      - run:
           name: Wait for MySQL
-          command: ./dockerize -wait tcp://127.0.0.1:3306 -timeout 1m
+          command: |
+            curl -L https://github.com/jwilder/dockerize/releases/download/v0.7.0/dockerize-linux-amd64-v0.7.0.tar.gz | tar xzf -
+            ./dockerize -wait tcp://127.0.0.1:3306 -timeout 1m
       - run:
           name: Go test
           command: ./test-ci.sh
