--- a/.circleci/test_config.yml
+++ b/.circleci/test_config.yml
@@ -24,7 +24,7 @@ jobs:
       - restore_cache:
           name: Restore Go caches
           keys:
-            - go-dependencies-{{ checksum "go.sum" }}
+            - go-dependencies-{{ checksum "~/test/go.sum" }}
       - run:
           name: Go mod download
           command: go mod download
@@ -42,7 +42,7 @@ jobs:
             DSN: root:password@tcp(127.0.0.1:3306)/
       - save_cache:
           name: Save Go caches
-          key: go-dependencies-{{ checksum "go.sum" }}
+          key: go-dependencies-{{ checksum "~/test/go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod # GOMODCACHE (module cache)
             - /home/circleci/.cache/go-build # GOCACHE (build cache)
