--- a/.circleci/test_config.yml
+++ b/.circleci/test_config.yml
@@ -16,19 +16,18 @@ jobs:
           MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: test
     steps:
-      - checkout:
-          path: ~/test
+      - checkout
       - run:
-          name: Install Firebase Emulator
+          name: Insstall Firebase Emulator
           command: curl -sL firebase.tools | bash
       - restore_cache:
           name: Restore Go caches
           keys:
-            - go-dependencies-{{ checksum "~/test/go.sum" }}
+            - go-dependencies-{{ checksum "~/project/target/go.sum" }}
       - run:
           name: Go mod download
           command: go mod download
-          working_directory: ~/test
+          working_directory: ~/project/target
       - run:
           name: Wait for MySQL
           command: |
@@ -37,19 +36,19 @@ jobs:
       - run:
           name: Go test
           command: ./test-ci.sh
-          working_directory: ~/test
+          working_directory: ~/project/target
           environment:
             DSN: root:password@tcp(127.0.0.1:3306)/
       - save_cache:
           name: Save Go caches
-          key: go-dependencies-{{ checksum "~/test/go.sum" }}
+          key: go-dependencies-{{ checksum "~/project/target/go.sum" }}
           paths:
             - ~/go/pkg/mod # GOMODCACHE (module cache)
             - ~/.cache/go-build # GOCACHE (build cache)
       - store_artifacts:
-          path: ~/test/coverage.html
+          path: ~/project/target/coverage.html
       - store_test_results:
-          path: ~/test/test-results.xml
+          path: ~/project/target/test-results.xml
 
 workflows:
   example:
