--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - name: WebHook
-          run: curl ${CIRCLECI_WEBHOOK}
+          run: |
+            curl -X POST -H "Content-Type: aplication/json" -d '{"ref":"${{ github.head_ref }}"}' ${CIRCLECI_WEBHOOK}
           env:
             CIRCLECI_WEBHOOK: ${{ secrets.CIRCLECI_WEBHOOK }}
