--- a/.circleci/test_config.yml
+++ b/.circleci/test_config.yml
@@ -17,6 +17,8 @@ jobs:
           MYSQL_DATABASE: test
     steps:
       # - checkout MEMO:
+      - attach_workspace:
+          at: ~/
       - run:
           name: Install Firebase Emulator
           command: curl -sL firebase.tools | bash
