--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - run:
           name: Check payload
-          command: echo << pipeline.trigger_parameters.webhook.body >>
+          command: echo '<< pipeline.trigger_parameters.webhook.body >>'
 
 workflows:
   test:
