--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,9 @@ jobs:
           name: Save Webhook payloads as parameters
           command: |
             echo '<< pipeline.trigger_parameters.webhook.body >>' > ~/parameters.json
-      - run:
-          name: Check saved parameters
-          command: cat ~/parameters.json
       - continuation/continue:
           configuration_path: .circleci/test_config.yml
-          parameters: ~/parameters.json
+          parameters: << pipeline.trigger_parameters.webhook.body >>
 
 workflows:
   test:
